Added Pagination gem

--- a/app/views/home/_search_result.html.erb
+++ b/app/views/home/_search_result.html.erb
@@ -1,9 +1,10 @@
 <%# TODO: Can use the space/index file instead of this partial%>
-
-  <% @spaces.each do |space| %>
+<% @spaces.each do |space| %>
     <br/>
-      <div>
-        <%= space.name %>
-        <%= space.address %>
-      </div>
-  <% end %>
+    <div>
+      <%= space.name %>
+      <%= space.address %>
+    </div>
+<% end %>
+<%= will_paginate @spaces%>
+
