--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,15 +1,10 @@
 
-<%if current_user%>
-  <%= link_to 'Logout', destroy_user_session_path,:method => 'delete'%> 
-  <%= link_to 'List your Space', new_space_path%>
- <%else%>
- <%= link_to 'Login', new_user_session_path%> | <%= link_to 'Register', new_user_registration_path%>
-<%end%>
 
-<%= form_tag(search_home_index_path,  method: :get, remote: true) do %>
- <%= text_field_tag 'name','' %> Search your Space
-    <%= submit_tag 'Search' %>
-<%end%>
+<div class="home-search">
+  <%= form_tag(search_home_index_path,  method: :get, remote: true) do %>
+      <%= text_field_tag 'name','' %>
+      <%= submit_tag 'Search' %>
+  <%end%>
 
-<div id="search_result"></div>
-
+  <div id="search_result" style="text-align: left;"></div>
+</div>
