--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -11,7 +11,7 @@
 
 <% @spaces.each do |space| %>
   <tr>
-    <td><%= space.name %></td>
+    <td><%= space.space_type %></td>
     <td><%= space.address %></td>
     <td><%= link_to 'Show', space %></td>
     <td><%= link_to 'Edit', edit_space_path(space) %></td>
