--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,15 @@
           background: #f5f5f5;
           margin: 1px 0 1px;
           float: left;
+          font-family: ubuntu;
+          font-size: 5;
 
       }
+      .content a {
+          text-decoration: none;
+
+      }
+
       .rightside{
           width: 10%;
           height: 550px;
@@ -72,8 +79,9 @@
     <%if current_user%>
         <%= link_to 'List your Space', new_space_path%>
         <%= link_to 'Logout', destroy_user_session_path,:method => 'delete'%>
-
     <%else%>
+
+        <%= link_to 'Linkedin',user_omniauth_authorize_path(:linkedin)%> |
         <%= link_to 'Login', new_user_session_path%> | <%= link_to 'Register', new_user_registration_path%>
     <%end%>
   </div>
