--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,12 @@
           bottom: 0;
           right: 0;
       }
+      .header-links a{
+         text-decoration: none;
+      }
+      .header a{
+          text-decoration: none;
+      }
       .home-search{
           text-align: center;
           margin-top: 100px;
@@ -74,7 +80,7 @@
 
 
 
-<div class="header"><%= link_to 'properJI', root_path%>
+<div class="header"><h3><%= link_to 'properJI', root_path%></h3>
   <div class="header-links">
     <%if current_user%>
         <%= link_to 'List your Space', new_space_path%>
