--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Gmap</title>
-  <%= stylesheet_link_tag    "gmaps4rails" %>
+  <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application","gmaps4rails" %>
 
   <%= csrf_meta_tags %>
