--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,6 +84,7 @@
   <div class="header-links">
     <%if current_user%>
         <%= link_to 'List your Space', new_space_path%>
+        <%= link_to 'My profile', profile_home_path(current_user)%>
         <%= link_to 'Logout', destroy_user_session_path,:method => 'delete'%>
     <%else%>
 
